fix: change overflow scroll to auto - fix #22 (#60)

--- a/src/components/form/table/table.module.scss
+++ b/src/components/form/table/table.module.scss
@@ -3,7 +3,7 @@
 .wrapper {
   background-color: var(--text-0-bg);
   border-radius: var(--border-radius-lg);
-  overflow: scroll;
+  overflow: auto;
 
   @include boxShadow();
 
