--- a/src/components/layout/navigation/navigator/navigation.module.scss
+++ b/src/components/layout/navigation/navigator/navigation.module.scss
@@ -19,7 +19,7 @@
 
     position: relative;
     width: 100%;
-    overflow: scroll;
+    overflow: auto;
     min-width: 16rem;
 
     .content {
